--- a/api/article/models/article.settings.json
+++ b/api/article/models/article.settings.json
@@ -24,15 +24,6 @@
       "type": "richtext",
       "required": true
     },
-    "slug": {
-      "type": "uid",
-      "targetField": "title",
-      "required": true
-    },
-    "category": {
-      "model": "category",
-      "via": "articles"
-    },
     "image": {
       "model": "file",
       "via": "related",
@@ -48,6 +39,10 @@
     "author": {
       "via": "articles",
       "model": "writer"
+    },
+    "Slug": {
+      "type": "uid",
+      "targetField": "title"
     }
   }
 }
